kubernetes/apps/databases/crunchy-postgres/pgadmin/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name pgadmin
spec:
  hostnames: ["pgadmin.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pgadmin
          namespace: databases
          port: 5050
      matches:
        - path:
            type: PathPrefix
